# IMAPScheduledReportProcessor

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/: __main__.py  email_monitoring.py  email_processing.py  environment_init_vars.py  environment_settings.py  err_handling.py  logging_config.py  rich_custom.py  send_alert_email.py
