[project]
name = "imapscheduledreportprocessor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiologic==0.16.*",
    "imap-tools>=1.11.1",
    "pydantic==2.*",
    "pydantic-settings==2.*",
    "rich==14.*",
    "tzdata>=2026.1",
    "uvloop>=0.22.1 ; sys_platform == 'linux'",
    "winloop>=0.6.0 ; sys_platform == 'win32'",
]

